--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -1,9 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfilePage">
+    tools:context=".ProfilePage"
+    android:background="@color/pale_green_pages">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/profile_title_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginVertical="20dp"
+        android:text="Profile"
+        android:textColor="@color/white_smoke"
+        android:textSize="30sp">
+    </TextView>
+
+    <TextView
+        android:id="@+id/profile_username_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Username:"
+        android:layout_below="@+id/profile_title_text"
+        android:padding="20sp"
+        android:textColor="@color/white"
+        android:textSize="15sp"/>
+
+    <TextView
+        android:id="@+id/profile_username_plain_text"
+        android:layout_width="239dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/profile_title_text"
+        android:layout_marginStart="15sp"
+        android:layout_toEndOf="@+id/profile_username_text"
+        android:ems="10"
+        android:padding="20sp"
+        android:text=""
+        android:textColor="@color/white"
+        android:textSize="15sp" />
+
+    <TextView
+        android:id="@+id/profile_name_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name:"
+        android:layout_below="@+id/profile_username_text"
+        android:padding="20sp"
+        android:textColor="@color/white"
+        android:textSize="15sp"/>
+
+    <TextView
+        android:id="@+id/profile_name_plain_text"
+        android:layout_width="244dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/profile_username_plain_text"
+        android:layout_marginStart="15sp"
+        android:layout_toEndOf="@+id/profile_username_text"
+        android:ems="10"
+        android:padding="20sp"
+        android:textColor="@color/white"
+        android:textSize="15sp" />
+
+    <TextView
+        android:id="@+id/profile_password_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Password:"
+        android:layout_below="@+id/profile_name_text"
+        android:padding="20sp"
+        android:textColor="@color/white"
+        android:textSize="15sp"/>
+
+    <TextView
+        android:id="@+id/profile_password_plain_text"
+        android:layout_width="238dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/profile_name_plain_text"
+        android:layout_marginStart="15sp"
+        android:layout_toEndOf="@+id/profile_username_text"
+        android:ems="10"
+        android:padding="20sp"
+        android:textColor="@color/white"
+        android:textSize="15sp" />
+
+    <TextView
+        android:id="@+id/profile_date_joined_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Date Joined:"
+        android:layout_below="@+id/profile_password_text"
+        android:padding="20sp"
+        android:textColor="@color/white"
+        android:textSize="15sp"/>
+
+    <TextView
+        android:id="@+id/profile_date_joined_plain_text"
+        android:layout_width="241dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/profile_password_plain_text"
+        android:layout_marginStart="15sp"
+        android:layout_toEndOf="@+id/profile_username_text"
+        android:ems="10"
+        android:padding="20sp"
+        android:text=""
+        android:textColor="@color/white"
+        android:textSize="15sp" />
+
+    <TextView
+        android:id="@+id/profile_groups_in_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Groups In:"
+        android:layout_below="@+id/profile_date_joined_text"
+        android:padding="20sp"
+        android:textColor="@color/white"
+        android:textSize="15sp"/>
+
+    <TextView
+        android:id="@+id/profile_groups_in_plain_text"
+        android:layout_width="246dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/profile_date_joined_plain_text"
+        android:layout_marginStart="15sp"
+        android:layout_toEndOf="@+id/profile_username_text"
+        android:ems="10"
+        android:padding="20sp"
+        android:textColor="@color/white"
+        android:textSize="15sp" />
+
+
+</RelativeLayout>
