--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="white_smoke">#f7f7f0</color>
     <color name="pale_green">#a6f6d3</color>
     <color name="pale_green_darker">#62C59A</color>
+    <color name="pale_green_pages">#6ED8AA</color>
 </resources>
