--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -8,129 +8,197 @@
     tools:context=".ProfilePage"
     android:background="@color/pale_green_pages">
 
+    <ImageView
+        android:id="@+id/profile_banner"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/dark_green"
+        app:layout_constraintHeight_percent="0.2"
+        app:layout_constraintVertical_bias="0"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+    </ImageView>
 
     <TextView
-        android:id="@+id/profile_title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginVertical="20dp"
-        android:text="Profile"
-        android:textColor="@color/white_smoke"
-        android:textSize="30sp">
+        android:text="Account Details"
+        android:textColor="@color/white"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toBottomOf="@+id/profile_banner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/profile_banner">
     </TextView>
 
     <TextView
         android:id="@+id/profile_username_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="15dp"
+        android:padding="15sp"
         android:text="Username:"
-        android:layout_below="@+id/profile_title_text"
-        android:padding="20sp"
         android:textColor="@color/white"
-        android:textSize="15sp"/>
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_banner" />
 
-    <TextView
+    <EditText
         android:id="@+id/profile_username_plain_text"
         android:layout_width="239dp"
+        android:layout_marginVertical="15dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/profile_title_text"
-        android:layout_marginStart="15sp"
-        android:layout_toEndOf="@+id/profile_username_text"
-        android:ems="10"
-        android:padding="20sp"
+        android:ems="15"
+        android:padding="15sp"
         android:text=""
         android:textColor="@color/white"
-        android:textSize="15sp" />
+        android:background="@drawable/edit_text_bg"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/profile_username_text"
+        app:layout_constraintTop_toBottomOf="@+id/profile_banner" />
 
     <TextView
         android:id="@+id/profile_name_text"
+        android:layout_marginVertical="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name:"
         android:layout_below="@+id/profile_username_text"
-        android:padding="20sp"
+        android:padding="15dp"
+        android:text="Name:"
         android:textColor="@color/white"
-        android:textSize="15sp"/>
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_username_text" />
 
-    <TextView
+    <EditText
         android:id="@+id/profile_name_plain_text"
+        android:layout_marginVertical="15dp"
         android:layout_width="244dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/profile_username_plain_text"
-        android:layout_marginStart="15sp"
         android:layout_toEndOf="@+id/profile_username_text"
-        android:ems="10"
-        android:padding="20sp"
+        android:ems="15"
+        android:padding="15dp"
+        android:background="@drawable/edit_text_bg"
         android:textColor="@color/white"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/profile_name_text"
+        app:layout_constraintTop_toBottomOf="@+id/profile_username_plain_text" />
 
     <TextView
         android:id="@+id/profile_password_text"
+        android:layout_marginVertical="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Password:"
         android:layout_below="@+id/profile_name_text"
-        android:padding="20sp"
+        android:padding="15dp"
+        android:text="Password:"
         android:textColor="@color/white"
-        android:textSize="15sp"/>
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_name_text" />
 
-    <TextView
+    <EditText
         android:id="@+id/profile_password_plain_text"
+        android:layout_marginVertical="15dp"
         android:layout_width="238dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/profile_name_plain_text"
-        android:layout_marginStart="15sp"
         android:layout_toEndOf="@+id/profile_username_text"
-        android:ems="10"
-        android:padding="20sp"
+        android:ems="15"
+        android:background="@drawable/edit_text_bg"
+        android:padding="15dp"
         android:textColor="@color/white"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/profile_password_text"
+        app:layout_constraintTop_toBottomOf="@+id/profile_name_plain_text" />
 
     <TextView
         android:id="@+id/profile_date_joined_text"
+        android:layout_marginVertical="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Date Joined:"
         android:layout_below="@+id/profile_password_text"
-        android:padding="20sp"
+        android:padding="15dp"
+        android:text="Date Joined:"
         android:textColor="@color/white"
-        android:textSize="15sp"/>
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_password_text" />
 
     <TextView
         android:id="@+id/profile_date_joined_plain_text"
+        android:layout_marginVertical="15dp"
         android:layout_width="241dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/profile_password_plain_text"
-        android:layout_marginStart="15sp"
         android:layout_toEndOf="@+id/profile_username_text"
-        android:ems="10"
-        android:padding="20sp"
+        android:ems="15"
+        android:padding="15dp"
+        android:background="@drawable/edit_text_bg"
         android:text=""
         android:textColor="@color/white"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/profile_date_joined_text"
+        app:layout_constraintTop_toBottomOf="@+id/profile_password_plain_text" />
 
     <TextView
         android:id="@+id/profile_groups_in_text"
+        android:layout_marginVertical="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Groups In:"
         android:layout_below="@+id/profile_date_joined_text"
-        android:padding="20sp"
+        android:padding="15dp"
+        android:text="Groups In:"
         android:textColor="@color/white"
-        android:textSize="15sp"/>
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_date_joined_text" />
 
     <TextView
         android:id="@+id/profile_groups_in_plain_text"
+        android:layout_marginVertical="15dp"
         android:layout_width="246dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/profile_date_joined_plain_text"
-        android:layout_marginStart="15sp"
         android:layout_toEndOf="@+id/profile_username_text"
-        android:ems="10"
-        android:padding="20sp"
+        android:ems="15"
+        android:padding="15dp"
         android:textColor="@color/white"
-        android:textSize="15sp" />
+        android:background="@drawable/edit_text_bg"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/profile_groups_in_text"
+        app:layout_constraintTop_toBottomOf="@+id/profile_date_joined_plain_text" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Edit Profile"
+        android:backgroundTint="@color/dark_green"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_groups_in_plain_text" />
+
+    <Button
+        android:id="@+id/delete_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/red"
+        android:text="Delete Profile"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
