--- a/app/src/main/res/layout/activity_register_profile_page.xml
+++ b/app/src/main/res/layout/activity_register_profile_page.xml
@@ -7,164 +7,132 @@
     tools:context=".RegisterProfilePage"
     android:background="@color/pale_green_pages">
 
-    <TextView
-        android:id="@+id/create_account_text"
-        android:layout_width="141dp"
-        android:layout_height="41dp"
-        android:text="Create Account"
-        android:textColor="@color/white"
-        android:textSize="20dp"
+    <ImageView
+        android:id="@+id/profile_banner"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/dark_green"
+        app:layout_constraintHeight_percent="0.2"
+        app:layout_constraintVertical_bias="0"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.049" />
+        app:layout_constraintTop_toTopOf="parent">
+    </ImageView>
 
     <TextView
-        android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Enter Username:"
-        android:padding="10dp"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName5"
-        app:layout_constraintHorizontal_bias="0.534"
+        android:text="Create Profile"
+        android:textColor="@color/white"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toBottomOf="@+id/profile_banner"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_account_text" />
+        app:layout_constraintTop_toTopOf="@+id/profile_banner">
+    </TextView>
+
+
 
     <EditText
-        android:id="@+id/editTextTextPersonName5"
+        android:id="@+id/create_profile_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="60dp"
-        android:ems="10"
+        android:layout_marginTop="60dp"
+        android:ems="15"
+        android:hint="username"
+        android:drawableRight="@drawable/ic_baseline_person_24"
+        android:background="@drawable/edit_text_bg"
         android:inputType="textPersonName"
-        android:padding="10dp"
-        android:text="username"
+        android:padding="15dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_banner" />
+
+    <EditText
+        android:id="@+id/create_user_first_name"
+        android:layout_width="wrap_content"
+        android:background="@drawable/edit_text_bg"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:ems="15"
+        android:textColorHint="@color/white"
+        android:hint="firstname"
+        android:inputType="textPersonName"
+        android:padding="15dp"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_account_text" />
-
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:padding="10dp"
-        android:text="Enter First Name:"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName5"
-        app:layout_constraintHorizontal_bias="0.522"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+        app:layout_constraintTop_toBottomOf="@+id/create_profile_username" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName6"
+        android:id="@+id/create_user_last_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="60dp"
-        android:ems="10"
+        android:ems="15"
+        android:textColorHint="@color/white"
+        android:background="@drawable/edit_text_bg"
+        android:hint="lastname"
         android:inputType="textPersonName"
-        android:padding="10dp"
-        android:text="firstname"
+        android:padding="15dp"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/textView15"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />
-
-    <TextView
-        android:id="@+id/textView16"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_marginTop="20dp"
-        android:text="Enter Last Name:"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName5"
-        app:layout_constraintHorizontal_bias="0.605"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView15" />
+        app:layout_constraintTop_toBottomOf="@+id/create_user_first_name" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName7"
+        android:id="@+id/create_user_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="60dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:padding="10dp"
-        android:text="lastname"
+        android:ems="15"
+        android:textColorHint="@color/white"
+        android:hint="password"
+        android:drawableRight="@drawable/ic_baseline_lock_24"
+        android:background="@drawable/edit_text_bg"
+        android:inputType="textPassword"
+        android:padding="15dp"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.909"
-        app:layout_constraintStart_toEndOf="@+id/textView16"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />
-
-    <TextView
-    android:id="@+id/textView17"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="20dp"
-        android:padding="10dp"
-    android:text="Enter Password:"
-    android:textSize="16sp"
-    app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName5"
-    app:layout_constraintHorizontal_bias="0.644"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/textView16" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="60dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:padding="10dp"
-        android:text="password"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.9"
-        app:layout_constraintStart_toEndOf="@+id/textView17"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7" />
-
-    <TextView
-        android:id="@+id/textView18"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:padding="10dp"
-        android:text="Confirm Password:"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName5"
-        app:layout_constraintHorizontal_bias="0.644"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView17" />
+        app:layout_constraintTop_toBottomOf="@+id/create_user_last_name" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName9"
+        android:id="@+id/create_user_reenter_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="60dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="re-enter password"
+        android:layout_marginTop="20dp"
+        android:ems="15"
+        android:textColorHint="@color/white"
+        android:drawableRight="@drawable/ic_baseline_lock_24"
+        android:background="@drawable/edit_text_bg"
+        android:padding="15dp"
+        android:hint="confirm password"
+        android:inputType="textPassword"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/textView18"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/create_user_password" />
+
+    <Button
+        android:id="@+id/create_account_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:text="Create Account"
+        android:backgroundTint="@color/dark_green"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/create_user_reenter_password" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
