--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -46,7 +46,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_banner" />
 
-    <EditText
+    <TextView
         android:id="@+id/profile_username_plain_text"
         android:layout_width="239dp"
         android:layout_marginVertical="15dp"
@@ -76,17 +76,19 @@
 
     <EditText
         android:id="@+id/profile_name_plain_text"
-        android:layout_marginVertical="15dp"
         android:layout_width="244dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/profile_username_plain_text"
+        android:layout_marginVertical="15dp"
+        android:layout_marginTop="20dp"
         android:layout_toEndOf="@+id/profile_username_text"
+        android:background="@drawable/edit_text_bg"
         android:ems="15"
         android:padding="15dp"
-        android:background="@drawable/edit_text_bg"
         android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.67"
         app:layout_constraintStart_toEndOf="@+id/profile_name_text"
         app:layout_constraintTop_toBottomOf="@+id/profile_username_plain_text" />
 
@@ -105,17 +107,19 @@
 
     <EditText
         android:id="@+id/profile_password_plain_text"
-        android:layout_marginVertical="15dp"
         android:layout_width="238dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/profile_name_plain_text"
+        android:layout_marginVertical="15dp"
+        android:layout_marginTop="12dp"
         android:layout_toEndOf="@+id/profile_username_text"
-        android:ems="15"
         android:background="@drawable/edit_text_bg"
+        android:ems="15"
         android:padding="15dp"
         android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.513"
         app:layout_constraintStart_toEndOf="@+id/profile_password_text"
         app:layout_constraintTop_toBottomOf="@+id/profile_name_plain_text" />
 
@@ -134,18 +138,20 @@
 
     <TextView
         android:id="@+id/profile_date_joined_plain_text"
-        android:layout_marginVertical="15dp"
         android:layout_width="241dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/profile_password_plain_text"
+        android:layout_marginVertical="15dp"
+        android:layout_marginTop="12dp"
         android:layout_toEndOf="@+id/profile_username_text"
+        android:background="@drawable/edit_text_bg"
         android:ems="15"
         android:padding="15dp"
-        android:background="@drawable/edit_text_bg"
         android:text=""
         android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.456"
         app:layout_constraintStart_toEndOf="@+id/profile_date_joined_text"
         app:layout_constraintTop_toBottomOf="@+id/profile_password_plain_text" />
 
@@ -164,17 +170,19 @@
 
     <TextView
         android:id="@+id/profile_groups_in_plain_text"
-        android:layout_marginVertical="15dp"
         android:layout_width="246dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/profile_date_joined_plain_text"
+        android:layout_marginVertical="15dp"
+        android:layout_marginTop="12dp"
         android:layout_toEndOf="@+id/profile_username_text"
+        android:background="@drawable/edit_text_bg"
         android:ems="15"
         android:padding="15dp"
         android:textColor="@color/white"
-        android:background="@drawable/edit_text_bg"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.567"
         app:layout_constraintStart_toEndOf="@+id/profile_groups_in_text"
         app:layout_constraintTop_toBottomOf="@+id/profile_date_joined_plain_text" />
 
@@ -182,7 +190,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Edit Profile"
+        android:text="Update Profile"
         android:backgroundTint="@color/dark_green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
